--- a/test-esri.html
+++ b/test-esri.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://js.arcgis.com/4.5/esri/css/main.css">
     <script src="https://js.arcgis.com/4.5/"></script>
 
-    <link rel="stylesheet" href="/assets/css/style.1.css" type="text/css">
-    <script src="/assets/js/main.1.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./assets/css/style.1.css" type="text/css">
+    <script src="./assets/js/main.1.js" type="text/javascript"></script>
     <title>Intro to MapView - Create a 2D map</title>
 </head>
 
