--- a/test-ol.html
+++ b/test-ol.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://openlayers.org/en/v4.3.4/css/ol.css" type="text/css">
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
     <script src="https://openlayers.org/en/v4.3.4/build/ol.js" type="text/javascript"></script>
     <title>OpenLayers example</title>
 </head>
@@ -11,7 +11,7 @@
 <body>
     <h2>My Map</h2>
     <div id="map" class="map"></div>
-    <script src="/assets/js/main.js" type="text/javascript"></script>
+    <script src="./assets/js/main.js" type="text/javascript"></script>
 </body>
 
 </html>
