--- a/test-esri.html
+++ b/test-esri.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+
     <link rel="stylesheet" href="https://js.arcgis.com/4.5/esri/css/main.css">
     <script src="https://js.arcgis.com/4.5/"></script>
+
 
     <link rel="stylesheet" href="./assets/css/style.1.css" type="text/css">
     <script src="./assets/js/main.1.js" type="text/javascript"></script>
@@ -15,7 +18,17 @@
 
 <body>
     <h2>My Map</h2>
-    <div id="viewDiv" class="map"></div>
+    <div id="panel-map">
+        <div id="viewDiv" class="map"></div>
+    </div>
+    <div id="panel-linechart">
+        <svg width="960" height="500"></svg>
+    </div>
+
+    <script src="./assets/js/main.2.js" type="text/javascript"></script>
+
+
+
 </body>
 
 </html>
